[package]
name = "acbu_lending_pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
soroban-sdk = "21.0.0"
shared = { path = "../shared" }

[dev-dependencies]
proptest = "1.11.0"
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
